迁移netty相关模块，修改相关代码以适配jdk17